--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ProductBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegisterBLL.cs" />
+    <Compile Include="StaffBLL.cs" />
     <Compile Include="TestAccountDAL.cs" />
   </ItemGroup>
   <ItemGroup>
